# sk-machine-learn

./: .gitignore  LICENSE  README.md
skm-learn/: Cargo.toml  training-config.ini
skm-learn/src/: main.rs
skm-predict/: Cargo.toml  prediction-config.ini
skm-predict/src/: main.rs
