[package]
name = "skm-learn"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
linfa = { version = "0.7.0", features = ["serde"] }
linfa-datasets = { version = "0.7.0", features = ["winequality"] }
linfa-svm = { version = "0.7.0", features = ["serde"]}
ndarray = "0.15.6"
rust-ini = "0.20.0"
rustlearn = "0.5.0"
rusty-machine = "0.5.4"
serde = "1.0.190"
serde_json = "1.0.107"
